# homework4

./: Doxyfile  README.md  annotated.html  classEndian-members.html  classEndian.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  ip__printer_8cpp.html  ip__printer_8cpp__incl.map  ip__printer_8cpp__incl.md5  ip__printer_8h.html  ip__printer_8h__dep__incl.map  ip__printer_8h__dep__incl.md5  ip__printer_8h__incl.map  ip__printer_8h_source.html  md_README.html  pages.html  test__print__ip_8cpp.html  test__print__ip_8cpp__incl.map  test__print__ip_8cpp__incl.md5
.github/workflows/: workflow4.yaml
d0/db4/: classEndian-members.html
d4/d86/: ip__printer_8cpp__incl.map  ip__printer_8cpp__incl.md5
d5/d3a/: test__print__ip_8cpp.html
d7/df9/: ip__printer_8h.html  ip__printer_8h_source.html
d8/d62/: classEndian.html
da/d76/: ip__printer_8h__incl.md5
dc/da2/: ip__printer_8h__dep__incl.map  ip__printer_8h__dep__incl.md5
df/d82/: test__print__ip_8cpp__incl.map  test__print__ip_8cpp__incl.md5
df/dd0/: ip__printer_8cpp.html
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  classes_0.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  variables_0.js
src/: CMakeLists.txt  ip_printer.cpp  ip_printer.h  test_print_ip.cpp
